Subject line is now editable on iphone. still has an alignment issue, but it's usable.
[fixes #64441404]

--- a/app/assets/stylesheets/classes/_compose.sass
+++ b/app/assets/stylesheets/classes/_compose.sass
@@ -26,6 +26,15 @@
     line-height: 46px
     font-size: 18px
     padding: 0 5px
+    position: relative
+
+    .subject
+      width: 100%
+      position: absolute
+      right: 0
+      left: 0
+      padding-left: 70px
+      top: 0.6em
 
   textarea
     width: 100%
